--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-6 col-md-4 offset-md-1">
-						<a href="#" class="subheader_logo"><img src="/src/icons/logo.png" alt="logo"></a>
+						<a href="#" class="subheader_logo"><img src="icons/logo.png" alt="logo"></a>
 						<div class="subheader_official">Официальный партнер Uber в Москве</div>
 					</div>
 	
@@ -82,7 +82,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/1.png" alt="reason">
+							<img src="icons/8/1.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
@@ -95,7 +95,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/2.png" alt="reason">
+							<img src="icons/8/2.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -108,7 +108,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/3.png" alt="reason">
+							<img src="icons/8/3.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
@@ -121,7 +121,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/4.png" alt="reason">
+							<img src="icons/8/4.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
@@ -134,7 +134,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/5.png" alt="reason">
+							<img src="icons/8/5.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
@@ -147,7 +147,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/6.png" alt="reason">
+							<img src="icons/8/6.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -160,7 +160,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/7.png" alt="reason">
+							<img src="icons/8/7.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -173,7 +173,7 @@
 				<div class="col-md-6">
 					<div class="reasons_block">
 						<div class="reasons_round">
-							<img src="/src/icons/8/8.png" alt="reason">
+							<img src="icons/8/8.png" alt="reason">
 						</div>
 						<div class="reasons_descr">
 							<div class="reasons_subtitle">Без шашечек и наклеек</div>
@@ -253,7 +253,7 @@
 			<h2 class="title title_white">Выбор - отличная штука!</h2>
 			<div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
 
-			<img src="/src/img/prius.png" alt="uber car" class="choice_img">
+			<img src="img/prius.png" alt="uber car" class="choice_img">
 			<div class="choice_descr">
 				Машины на каждый день.<br>
 				Лучше, быстрее и дешевле, чем такси
